--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,20 @@ edition = "2021"
 
 [workspace]
 resolver = "2"
-members = [
-    "parser",
+members = [ "bin-server",
+    "document",
     "sections"
-, "server"]
+, "server", "testutil"]
 
 [workspace.dependencies]
 anyhow = "1.0.86"
+axum = "0.7.5"
+tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
+serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.120"
+log = "0.4.22"
+
+
+[[bin]]
+name = "server"
+path = "bin-server/src/main.rs"
