--- a/bin-server/Cargo.toml
+++ b/bin-server/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "sections"
+name = "bin-server"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-anyhow.workspace = true
-log.workspace = true
-serde.workspace = true
-serde_yaml = "0.9.34"
+tokio.workspace = true
+axum.workspace = true
+server = { path = "../server" }
+clap = { version = "4.5.13", features = ["derive"] }
