--- a/document/Cargo.toml
+++ b/document/Cargo.toml
@@ -1,9 +1,12 @@
 [package]
-name = "parser"
+name = "document"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
-anyhow = { workspace = true }
+anyhow.workspace = true
+serde.workspace = true
+
+testutil = { path = "../testutil" }
 sections = { version = "0.1.0", path = "../sections" }
