--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,10 +7,14 @@ edition = "2021"
 
 [dependencies]
 anyhow.workspace = true
-axum = "0.7.5"
-parser = { version = "0.1.0", path = "../parser" }
-serde = { version = "1.0.204", features = ["derive"] }
-serde_json = "1.0.120"
+tokio.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+axum.workspace = true
+
+document = { version = "0.1.0", path = "../document" }
+sections = { version = "0.1.0", path = "../sections" }
+testutil = { version = "0.1.0", path = "../testutil" }
 
 [dev-dependencies]
 vfs = "0.12.0"
