--- a/testutil/Cargo.toml
+++ b/testutil/Cargo.toml
@@ -1,12 +1,8 @@
 [package]
-name = "sections"
+name = "testutil"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow.workspace = true
-log.workspace = true
-serde.workspace = true
-serde_yaml = "0.9.34"
