--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,19 +7,26 @@ edition = "2021"
 
 [workspace]
 resolver = "2"
-members = [ "bin-server",
+members = [
+    "bin-server",
     "document",
-    "sections"
-, "server", "testutil"]
+    "sections",
+    "server",
+    "testutil",
+    "examples/*",
+    "fs-backend",
+]
+exclude = ["examples/sample"]
 
 [workspace.dependencies]
 anyhow = "1.0.86"
 axum = "0.7.5"
-tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.39.2", features = ["fs", "macros", "rt-multi-thread"] }
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
 log = "0.4.22"
-
+vfs = "0.12.0"
+thiserror = "1.0.63"
 
 [[bin]]
 name = "server"
