--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,10 +11,10 @@ tokio.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 axum.workspace = true
+vfs.workspace = true
+thiserror.workspace = true
 
 document = { version = "0.1.0", path = "../document" }
 sections = { version = "0.1.0", path = "../sections" }
 testutil = { version = "0.1.0", path = "../testutil" }
-
-[dev-dependencies]
-vfs = "0.12.0"
+fs-backend = { version = "0.1.0", path = "../fs-backend" }
